fixed tile alignments

--- a/src/components/landingPage/landingPage.css
+++ b/src/components/landingPage/landingPage.css
@@ -1,6 +1,9 @@
 .landingPageContainer{
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .blogTitleContainer{
@@ -66,6 +69,7 @@
 }
 
 .blogPostTilesContainer{
+    max-width: 1000px;
     padding: 20px;
     display: flex;
     align-items: center;
